Fixed a spacing issue with the ticket purchase buttons.

--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,17 @@ h2 {
 	text-align: center;
 }
 
+.buytickets {
+	margin-top: 25%;
+}
+
 h3 {
 	padding-left: .5em;
 	padding-top: .5em;
 }
 
 .monuments {
-	margin-top: 2%;
+	margin-top: 10%;
 }
 
 .sevenwonders {
@@ -80,16 +84,34 @@ ol {
 	position: relative;
 }
 
+.pricebuttondiv-b {
+	position: relative;
+}
+
 .pricebuttons {
 	padding: 0.2em ;
-	width: 50%;
+	width: 15%;
 	text-align: center;
 	font-size: 1em;
 	color: white;
 	background-color: #a8ae98;
 	background-image: linear-gradient(to bottom, #6FC000, #388200);
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
-	left: 50%;
+	left: 20%;
+	bottom: -100px;
+	position: absolute;
+}
+
+.pricebuttons-b {
+	padding: 0.2em ;
+	width: 15%;
+	text-align: center;
+	font-size: 1em;
+	color: white;
+	background-color: #a8ae98;
+	background-image: linear-gradient(to bottom, #6FC000, #388200);
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
+	right: 20%;
 	bottom: -100px;
 	position: absolute;
 }
@@ -192,29 +214,23 @@ img {
 	text-align: center;
 	margin-bottom: 1.5em;
 	color: white;
+	margin-top: 18%;
 }
 
 .showtimes {
-	padding: 0.5em ;
-	width: 25%;
+	padding: 1em ;
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 1em;
 	color: white;
 	background-color: gray;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
-	position: relative;
-	left: 25%;
-	bottom: -100px;
-	margin-bottom: 5px;
-}
-
-.showtimesbutton {
 	position: absolute;
-	left: 30%;
-	top: 50%;
+	left: 37%;
+	top: 70%;
 }
 
 footer {
 	background-color: teal;
 	padding: 0.2em 0em 0.2em 0em;
+	color: white;
 }
